plethora of balance

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1402,3 +1402,7 @@ bank_coodown;Bank cooldown.;;;;;;;;;;;;;x
 univerisity_cooldown;University cooldown.;;;;;;;;;;;;;x
 bank_cooldown_desc;A new Bank has been built.;;;;;;;;;;;;;x
 univerisity_coodown_desc;A new University has been built.;;;;;;;;;;;;;x
+lyon_textiles;Lyon Textile Industry;;;;;;;;;;;;;x
+manchester_textiles;Manchester Textile Industry;;;;;;;;;;;;;x
+chinese_silk;Fine Asian Silk;;;;;;;;;;;;;x
+chinese_silk_desc;This province excels at producing high quality silk;;;;;;;;;;;;;x
