Poland fixes, US Unorganized Territories
rus: pacific path revamp

--- a/TGC/localisation/00_events_10000000.csv
+++ b/TGC/localisation/00_events_10000000.csv
@@ -318,3 +318,10 @@ EVT666666123OPTA;Interesting...;;;;;;;;;x
 EVTNAME666666123;Uprising in $FROMCOUNTRY$;;;;;;;;;x
 EVTDESC666666123;There is trouble brewing in $FROMCOUNTRY$! $FROMCOUNTRY$ is ready to dispatch additional police and military units to clamp down on the disorder. We should monitor what goes on with our Polish brethren here closely!;;;;;;;;;x
 EVT666666123OPTA;Interesting...;;;;;;;;;x
+EVT666666009OPTA;We shall see... To arms!;;;;;;;;;x
+EVT666666009OPTB;Sadly, there is nothing we can do at the moment...;;;;;;;;;x
+EVTOPTA666666004;Suppress the revolutionaries. It will not end well for Posen.;;;;;;;;;x
+EVTOPTB666666004;Let the Poles be free! Let's Unite Poland and restore its glory!;;;;;;;;;x
+EVTOPTC666666004;Suppress the Poles! Occupy Posen!;;;;;;;;;x
+EVTOPTD666666004;Ignore the Poles. They are harmless.;;;;;;;;;x
+EVTOPTA203903;No More!;;;;;;;;;x
