--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -45,3 +45,4 @@ january_uprising_succeeded;Congress Poland Uprising Succeeded;;;;;;;;;x
 crimean_war;Crimean War Happened;;;;;;;;;x
 treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
 treaty_of_paris_russia;Treaty of Paris and Ayvansaray - Russia won Crimean War;;;;;;;;;x
+the_manifesto;The Manifesto on Unshakable Autocracy;;;;;;;;;x
