claim west poland

--- a/TGC/localisation/00_events_10000000.csv
+++ b/TGC/localisation/00_events_10000000.csv
@@ -325,3 +325,5 @@ EVTOPTB666666004;Let the Poles be free! Let's Unite Poland and restore its glory
 EVTOPTC666666004;Suppress the Poles! Occupy Posen!;;;;;;;;;x
 EVTOPTD666666004;Ignore the Poles. They are harmless.;;;;;;;;;x
 EVTOPTA203903;No More!;;;;;;;;;x
+EVTOPTA500007;Slava Polski!;;;;;;;;;x
+EVTOPTB500007;On second thoughts..;;;;;;;;;x
