--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -44,5 +44,16 @@ through_january_uprising;Through the Congress Poland Uprising;;;;;;;;;x
 january_uprising_succeeded;Congress Poland Uprising Succeeded;;;;;;;;;x
 crimean_war;Crimean War Happened;;;;;;;;;x
 treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
-treaty_of_paris_russia;Treaty of Paris and Ayvansaray - Russia won Crimean War;;;;;;;;;x
+treaty_of_paris_russia;Treaty of Ayvansaray - Russia won the Crimean War;;;;;;;;;x
 the_manifesto;The Manifesto on Unshakable Autocracy;;;;;;;;;x
+theocratic_government;Theocracy;;;;;;;;;x
+communist_gov;Communist Dictatorship;;;;;;;;;x
+semi_constitutional_monarchy_gov;Constitutional Monarchy;;;;;;;;;x
+constitutional_monarchy_gov;Parliamentary Monarchy;;;;;;;;;x
+democracy_gov;Republic;;;;;;;;;x
+presidential_dictatorship_gov;Autocratic Dictatorship;;;;;;;;;x
+fascist_gov;Fascist Dictatorship;;;;;;;;;x
+anarcho_liberal_gov;Bourgeois Dictatorship;;;;;;;;;x
+colonial_company_gov;Autonomous Dependancy;;;;;;;;;x
+dominion_gov;Dominion;;;;;;;;;x
+absolute_monarchy_gov;Absolute Monarchy;;;;;;;;;x
