--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1423,3 +1423,5 @@ manchester_textiles;Manchester Textile Industry;;;;;;;;;;;;;x
 chinese_silk;Fine Asian Silk;;;;;;;;;;;;;x
 chinese_silk_desc;This province excels at producing high quality silk;;;;;;;;;;;;;x
 university_cooldown_desc;A new University has been built.;;;;;;;;;;;;;x
+austrian_betrayal;Vienna Betrayal;;;;;;;;;;;;;x
+austrian_betrayal_desc;Austria turned their backs on us in Crimean War. We will never forget this.;;;;;;;;;;;;;x
