--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1398,10 +1398,10 @@ rgo_boycott_modifier_desc;They are refusing to work!;;;;;;;;;;;;;x
 religious_insurrection;Religious Insurrection;;;;;;;;;;;;;x
 religious_insurrection_desc;Locals are rebelling on blind fate!;;;;;;;;;;;;;x
 neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
-bank_coodown;Bank cooldown.;;;;;;;;;;;;;x
+bank_cooldown;Bank cooldown.;;;;;;;;;;;;;x
 univerisity_cooldown;University cooldown.;;;;;;;;;;;;;x
 bank_cooldown_desc;A new Bank has been built.;;;;;;;;;;;;;x
-univerisity_coodown_desc;A new University has been built.;;;;;;;;;;;;;x
+university_coodown_desc;A new University has been built.;;;;;;;;;;;;;x
 lyon_textiles;Lyon Textile Industry;;;;;;;;;;;;;x
 manchester_textiles;Manchester Textile Industry;;;;;;;;;;;;;x
 chinese_silk;Fine Asian Silk;;;;;;;;;;;;;x
