--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -808,7 +808,7 @@ LOS_federal_democracy;State of Los Altos;;;;;;;;;;;;;x
 LPL_colonial_company;Virreinato del Río de la Plata;;;;;;;;;;;;;x
 LSK_colonial_company;Amerikanskaya Kompaniya;;;;;;;;;;;;;x
 LSK_democracy;Republic of Alaska;;;;;;;;;;;;;x
-LSK_dominion;Commonwealth of Alaska;;;;;;;;;;;;;x
+LSK_dominion;Viceroyalty of America;;;;;;;;;;;;;x
 LSK_federal_democracy;Republic of Alaska;;;;;;;;;;;;;x
 LUB_absolute_monarchy;Duchy of Lübeck;;;;;;;;;;;;;x
 LUB_colonial_company;Kreis Lippe;;;;;;;;;;;;;x
