Prussia AI buff
so they stop losing against austria 9 out of 10 times

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1424,3 +1424,4 @@ chinese_silk_desc;This province excels at producing high quality silk;;;;;;;;;;;
 university_cooldown_desc;A new University has been built.;;;;;;;;;;;;;x
 austrian_betrayal;Vienna Betrayal;;;;;;;;;;;;;x
 austrian_betrayal_desc;Austria turned their backs on us in Crimean War. We will never forget this.;;;;;;;;;;;;;x
+prussian_military;Prussian Military;;;;;;;;;;;;;x
