--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1233,6 +1233,12 @@ EVTNAME97511;Stand Down;;;;;;;;;;;;;x
 EVTOPTA97511;It’s about time!;;;;;;;;;;;;;x
 EVTDESC97512;As we suspected, the terms of Russia’s treaty are punishing indeed.;;;;;;;;;;;;;x
 EVTOPTA97512;There shall be a reckoning.;;;;;;;;;;;;;x
+EVTOPTA97513;Refuse to participate;;;;;;;;;;;;;x
+EVTOPTB97513;Support our French allies and join the Coalition;;;;;;;;;;;;;x
+EVTOPTA97514;Honour the Holy Alliance;;;;;;;;;;;;;x
+EVTOPTB97514;Proclaim Neutrality;;;;;;;;;;;;;x
+EVTOPTC97514;Hostile Neutrality;;;;;;;;;;;;;x
+EVTOPTD97514;Join the Coalition Outright;;;;;;;;;;;;;x
 EVTDESC97515;To this day we remain a subject of the Turks. A growing movement has demanded our independence, and there are those who believe an offer of alliance with the Russians along with a guarantee of returning their lands in southern Bessarabia might entice them to support our efforts. Still others fear what a war of independence with the Turks will do to our nation. Is it worth it?;;;;;;;;;;;;;x
 EVTNAME97515;Romanian Independence;;;;;;;;;;;;;x
 EVTOPTA97515;We shall declare our independence.;;;;;;;;;;;;;x
