--- a/TGC/localisation/00_events_debug.csv
+++ b/TGC/localisation/00_events_debug.csv
@@ -1,4 +1,5 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
+AIEVENT;BEEP BOOP;;;;;;;;;;;;;x
 DBGDESC1;This event is meant to be used as an easily triggerable blank slate for testing the effect of some code. If this is not empty, somebody forgot to remove what they were testing when they were checking it in.;;;;;;;;;;;;;x
 DBGNAME1;Debug Event;;;;;;;;;;;;;x
 DBGOPTA1;Whatever this does;;;;;;;;;;;;;x
@@ -26,9 +27,8 @@ DBGNAME7;Government Selector;;;;;;;;;;;;;x
 DBGOPTA7;Monarchies;;;;;;;;;;;;;x
 DBGOPTB7;Dictatorships;;;;;;;;;;;;;x
 DBGOPTC7;Democracies;;;;;;;;;;;;;x
-DBGOPTD7;Colonial Companies;;;;;;;;;;;;;x
-DBGOPTE7;Dominions;;;;;;;;;;;;;x
-DBGOPTF7;Never mind;;;;;;;;;;;;;x
+DBGOPTD7;Colonial Governments;;;;;;;;;;;;;x
+DBGOPTE7;Never mind;;;;;;;;;;;;;x
 DBGOPTA8;Absolute Monarchy 1;;;;;;;;;;;;;x
 DBGOPTB8;Absolute Monarchy 2;;;;;;;;;;;;;x
 DBGOPTC8;Semi-constitutional Monarchy 1;;;;;;;;;;;;;x
@@ -40,15 +40,13 @@ DBGOPTA9;Bourgeois Dictatorship;;;;;;;;;;;;;x
 DBGOPTB9;Fascist Dictatorship;;;;;;;;;;;;;x
 DBGOPTC9;Presidential Dictatorship;;;;;;;;;;;;;x
 DBGOPTD9;Proletarian Dictatorship;;;;;;;;;;;;;x
-DBGOPTE9;Communist Puppet;;;;;;;;;;;;;x
-DBGOPTF9;Oligarchic Republic;;;;;;;;;;;;;x
-DBGOPTG9;Theocracy;;;;;;;;;;;;;x
+DBGOPTE9;Theocracy;;;;;;;;;;;;;x
 DBGOPTA10;Democracy 1;;;;;;;;;;;;;x
 DBGOPTB10;Democracy 2;;;;;;;;;;;;;x
 DBGOPTC10;Federal Democracy;;;;;;;;;;;;;x
 DBGOPTD10;Trade Unions Congress;;;;;;;;;;;;;x
 DBGOPTA11;Colony;;;;;;;;;;;;;x
-DBGOPTA12;Dominion;;;;;;;;;;;;;x
+DBGOPTB11;Dominion;;;;;;;;;;;;;x
 DBGDESC13;This event lets you set or clear the gov_reassign_exemption which prevents your government from being changed by a cleanup decision in situations where this your government is not appropriate for your situation (e.g. a country with a British colonial government that isn't a puppet of Britain).;;;;;;;;;;;;;x
 DBGNAME13;Government Reassignment Exemption;;;;;;;;;;;;;x
 DBGOPTA13;Set gov_reassign_exemption;;;;;;;;;;;;;x
@@ -65,5 +63,5 @@ DBGDESC15;This event will secede all non-empty provinces to one tag for their re
 DBGNAME15;Continent Mapmode;;;;;;;;;;;;;x
 DBGOPTA15;Why ever would you want this;;;;;;;;;;;;;x
 DBGOPTB15;I rather wouldn't;;;;;;;;;;;;;x
-AIEVENT;BEEP BOOP;;;;;;;;;;;;;x
+MONEY_EVENT;Money;;;;;;;;;;;;;x
 POP_DAILY_EVENT;Salary: §Y$VAL$§W¤;;;;;;;;;;;;;x
