--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -1,7 +1,7 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 aeroplanes;Aeroplanes;;;;;;;;;;;;;x
 ammunition;Ammunition;;;;;;;;;;;;;x
-automobiles;Automobiles;;;;;;;;;;;;;x
+automobiles;Motor Vehicles;;;;;;;;;;;;;x
 barrels;Tanks;;;;;;;;;;;;;x
 canned_food;Canned Food;;;;;;;;;;;;;x
 cattle;Livestock;;;;;;;;;;;;;x
@@ -23,12 +23,12 @@ furniture;Furniture;;;;;;;;;;;;;x
 glass;Glass;;;;;;;;;;;;;x
 grain;Food Crops;;;;;;;;;;;;;x
 industrial_goods;Industrial Goods;;;;;;;;;;;;;x
-iron;Iron;;;;;;;;;;;;;x
+iron;Metals;;;;;;;;;;;;;x
 liquor;Beverages;;;;;;;;;;;;;x
 lumber;Timber;;;;;;;;;;;;;x
 luxury_clothes;Luxury Clothing;;;;;;;;;;;;;x
 luxury_furniture;Luxury Furniture;;;;;;;;;;;;;x
-machine_parts;Machine Parts;;;;;;;;;;;;;x
+machine_parts;Machinery;;;;;;;;;;;;;x
 military_goods;Military Goods;;;;;;;;;;;;;x
 oil;Oil;;;;;;;;;;;;;x
 opium;Opium;;;;;;;;;;;;;x
@@ -42,10 +42,10 @@ rubber;Rubber;;;;;;;;;;;;;x
 silk;Silk;;;;;;;;;;;;;x
 small_arms;Firearms;;;;;;;;;;;;;x
 steamer_convoy;Steamers;;;;;;;;;;;;;x
-steel;Steel;;;;;;;;;;;;;x
+steel;Alloys;;;;;;;;;;;;;x
 sulphur;Sulphur;;;;;;;;;;;;;x
 tea;Tea;;;;;;;;;;;;;x
-telephones;Telephones;;;;;;;;;;;;;x
+telephones;Telecommunications;;;;;;;;;;;;;x
 timber;Wood;;;;;;;;;;;;;x
 tobacco;Tobacco;;;;;;;;;;;;;x
 tropical_wood;Tropical Wood;;;;;;;;;;;;;x
