alloys buff late game

--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -1,5 +1,6 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 aeroplanes;Aeroplanes;;;;;;;;;;;;;x
+artillery;Heavy Armaments;;;;;;;;;;;;;x
 ammunition;Ammunition;;;;;;;;;;;;;x
 automobiles;Automobiles;;;;;;;;;;;;;x
 barrels;Tanks;;;;;;;;;;;;;x
