New invention lines

--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1213,3 +1213,17 @@ x_rays;X-Rays;;;;;;;;;;;;;x
 x_rays_desc;With X-rays it was now possible to perfectly view any shattered bones within a body without cutting it up. This of course made operations and rehabilitation much easier.;;;;;;;;;;;;;x
 young_school_doctrine;Young School Doctrine;;;;;;;;;;;;;x
 young_school_doctrine_desc;The Jeune École (‘Young School’) is a strategic naval concept developed that advocates the use of small, powerfully equipped units to combat a larger battleship fleet, and commerce raiders capable of ending the trade of the rival nation.;;;;;;;;;;;;;x
+pulverized_coal_generators;Pulverized Coal Generators;;;;;;;;;;;;;x
+pulverized_coal_generators_desc;The idea behind pulverized coal generators is to crush coal into a very fine powder, which is then burned in a furnace with a high-speed airflow. This creates a highly efficient combustion process, which generates more heat and power than burning coal in a solid form.;;;;;;;;;;;;;x
+air_preheaters;Air Preheaters;;;;;;;;;;;;;x
+air_preheaters_desc;Air preheaters are essentially heat exchangers that heat the combustion air in a steam turbine by transferring heat from the flue gases that are leaving the turbine, making them a more cost-effective option for power generation;;;;;;;;;;;;;x
+absorption_refrigerators;Absorption Refrigerators;;;;;;;;;;;;;x
+absorption_refrigerators_desc;The basic principle behind absorption refrigerators is that certain chemicals, such as ammonia and water, can be used to create a refrigeration cycle that operates using only heat as an energy source. The process involves heating a mixture of ammonia and water, causing the ammonia to vaporize and separate from the water. The ammonia vapor is then cooled, which causes it to condense back into a liquid. This liquid ammonia is then mixed with water, which absorbs the heat generated during the process, allowing the cycle to continue.;;;;;;;;;;;;;x
+stainless_steel;Stainless Steel;;;;;;;;;;;;;x
+stainless_steel_desc;Stainless steel is an alloy of iron, carbon, and chromium, which gives it its characteristic resistance to corrosion and staining.;;;;;;;;;;;;;x
+high_speed_steel;High Speed Steel;;;;;;;;;;;;;x
+high_speed_steel_desc;High-speed steel is a type of steel alloy that is specifically designed to maintain its hardness and cutting ability at high temperatures.;;;;;;;;;;;;;x
+tool_steel;Tool Steel;;;;;;;;;;;;;x
+tool_steel_desc;Tool steel is a general term for a range of steel alloys that are specifically designed for use in tools, such as hammers, chisels, and punches. These alloys typically contain high levels of carbon.;;;;;;;;;;;;;x
+silicon_steel;Silicon Steel;;;;;;;;;;;;;x
+silicon_steel_desc;Silicon steel is an alloy of iron, carbon, and silicon, and is known for its magnetic properties.;;;;;;;;;;;;;x
