--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -1,6 +1,6 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 aeroplanes;Aeroplanes;;;;;;;;;;;;;x
-artillery;Heavy Armaments;;;;;;;;;;;;;x
+artillery;Heavy Armament;;;;;;;;;;;;;x
 ammunition;Ammunition;;;;;;;;;;;;;x
 automobiles;Motor Vehicles;;;;;;;;;;;;;x
 barrels;Tanks;;;;;;;;;;;;;x
@@ -14,7 +14,7 @@ consumer_goods;Consumer Goods;;;;;;;;;;;;;x
 cotton;Cotton;;;;;;;;;;;;;x
 dye;Natural Dyes;;;;;;;;;;;;;x
 electric_gear;Electric Parts;;;;;;;;;;;;;x
-explosives;Explosives;;;;;;;;;;;;;x
+explosives;Chemicals;;;;;;;;;;;;;x
 fabric;Textiles;;;;;;;;;;;;;x
 fertilizer;Fertilizer;;;;;;;;;;;;;x
 fish;Fish;;;;;;;;;;;;;x
@@ -53,3 +53,7 @@ tropical_wood;Tropical Wood;;;;;;;;;;;;;x
 wine;Wine;;;;;;;;;;;;;x
 wool;Wool;;;;;;;;;;;;;x
 precious_metal_desc;Precious metals like Gold and Silver can be converted straight into money.;;;;;;;;;;;;;;x
+soap;Soap;;;;;;;;;;;;;;x
+tires;Rubber Goods;;;;;;;;;;;;;;x
+pharmaceuticals;Pharmaceuticals;;;;;;;;;;;;;;x
+plastics;Plastics;;;;;;;;;;;;;;x
