--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -223,6 +223,10 @@ monroe_doctrine;Monroe Doctrine;Peuple libre;Freies Volk;;;;;;;;;;;x
 monroe_doctrine_desc;Drive out a §YEuropean colonial power§W from the Americas;Libérer un §Ypays§W de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
 monroe_doctrine_setup;Hand $STATE$ back to $THIRD$ from $RECIPIENT$;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;x
 monroe_doctrine_short;$THIRD$ acquires $STATE$;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;x
+gendarme_of_europe;Install Autocracy;Peuple libre;Freies Volk;;;;;;;;;;;x
+gendarme_of_europe_desc;Drive out the revolutionaries from $RECIPIENT$, restore Autocracy!;Libérer un §Ypays§W de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
+gendarme_of_europe_setup;Drive out the revolutionaries from $RECIPIENT$!;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;x
+gendarme_of_europe_short;$RECIPIENT$ installs Absolute Monarchy;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;x
 monroe2;Expel the Imperialist;Peuple libre;Freies Volk;;;;;;;;;;;;x;;;;;;;;;;;;;;
 monroe2_desc;Drive out the Invaders from the Americas;Libå»¨er un å³paysåŠ¬ de ses oppresseurs;Befreien Sie ein å³LandåŠ¬ von seinen Unterdrî…kern.;;;;;;;;;;;x
 monroe2_short;Seize the colonial holdings in the New World;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;;x;;;;;;;;;;;;;;
