--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -101,6 +101,7 @@ AGRESSION_WAR_LIBERATE_BALKANS_NAME;$ORDER$$FIRST$–$SECOND$ War of the Balkans;;
 AGRESSION_WAR_LIBERATE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Liberation;;$ORDER$$FIRST$-$COUNTRY_ADJ$er Befreiungskrieg;;;;;;;;;;;x
 AGRESSION_WAR_LIBERATE_NAME_ITA_TUR;The Libyan War;;;;;;;;;;;;;x
 AGRESSION_WAR_MONROE_DOCTRINE_NAME;The $ORDER$$FIRST$–$SECOND$ War of Anti–Imperialism;;;;;;;;;;;;;x
+AGRESSION_WAR_GENDARME_OF_EUROPE_NAME;The $ORDER$$FIRST$–$SECOND$ War of Counter-Revolution;;;;;;;;;;;;;x
 AGRESSION_WAR_NAME;$ORDER$War of $FIRST$ Aggression;$ORDER$ Offensive Militaire $FIRST$;$ORDER$ $FIRST$ Angriffskrieg;;;;;;;;;;;x
 AGRESSION_WAR_NAME_COMMUNISM;The $ORDER$$FIRST$–$SECOND$ Revolutionary War;;;;;;;;;;;;;x
 AGRESSION_WAR_NAME_DEMOCRACY;$ORDER$$FIRST$–$SECOND$ Counterrevolution;;;;;;;;;;;;;x
@@ -315,6 +316,7 @@ NORMAL_WAR_LIBERATE_NAME_PRU_EGY;$ORDER$Prussian Intervention in Egypt;;;;;;;;;;
 NORMAL_WAR_LIBERATE_NAME_RUS_EGY;$ORDER$Russian Intervention in Egypt;;;;;;;;;;;;;x
 NORMAL_WAR_LIBERATE_NAME_SPA_EGY;$ORDER$Spanish Intervention in Egypt;;;;;;;;;;;;;x
 NORMAL_WAR_MONROE_DOCTRINE_NAME;The $ORDER$$FIRST$–$SECOND$ War of Anti–Imperialism;;;;;;;;;;;;;x
+NORMAL_WAR_GENDARME_OF_EUROPE_NAME;The $ORDER$$FIRST$–$SECOND$ War of Counter-Revolution;;;;;;;;;;;;;x
 NORMAL_WAR_NAME;$ORDER$$FIRST$–$SECOND$ War;Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Krieg;;;;;;;;;;;x
 NORMAL_WAR_NAME_COMMUNISM;The $ORDER$$FIRST$–$SECOND$ Revolutionary War;;;;;;;;;;;;;x
 NORMAL_WAR_NAME_DEMOCRACY;$ORDER$$FIRST$–$SECOND$ Counterrevolution;;;;;;;;;;;;;x
