--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1425,3 +1425,5 @@ university_cooldown_desc;A new University has been built.;;;;;;;;;;;;;x
 austrian_betrayal;Vienna Betrayal;;;;;;;;;;;;;x
 austrian_betrayal_desc;Austria turned their backs on us in Crimean War. We will never forget this.;;;;;;;;;;;;;x
 prussian_military;Prussian Military;;;;;;;;;;;;;x
+decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
+decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
