--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3154,6 +3154,22 @@ zanzibar_sale_desc;The Zanzibar coast is almost worthless to us, but might be of
 zanzibar_sale_title;Sell Zanzibar;;;;;;;;;;;;;x
 zanzibar_treaty_port_desc;Zanzibar, coming from zangi, a Persian name of a local people, said to mean ‘black’, and the Persian bar, which means coast or shore. The Zanzibar Archipelago consists of several islands lying off the coast of East Africa in the Indian Ocean. There are three main islands plus a number of smaller islets that surround them and an isolated tiny islet. Zanzibar is the centre of the Arab slave trade and projects its power over a long strip of land in Eastern Africa. It would serve as an excellent base of operations and coaling station in East Africa.;;;;;;;;;;;;;x
 zanzibar_treaty_port_title;The Zanzibar Island Concession;;;;;;;;;;;;;x
+accept_syriacs_desc;Syriacs proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_syriacs_title;Accept the Syriacs;;;;;;;;;;;;;x
+accept_assyrians_desc;Assyrians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_assyrians_title;Accept the Assyrians;;;;;;;;;;;;;x
+accept_copts_desc;Copts proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_copts_title;Accept the Copts;;;;;;;;;;;;;x
+accept_bulgarians_desc;Bulgarians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_bulgarians_title;Accept the Bulgarians;;;;;;;;;;;;;x
+accept_romanians_desc;Romanians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_romanians_title;Accept the Romanians;;;;;;;;;;;;;x
+accept_serbians_desc;Serbians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_serbians_title;Accept the Serbians;;;;;;;;;;;;;x
+accept_georgians_desc;Georgians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_georgians_title;Accept the Georgians;;;;;;;;;;;;;x
+accept_south_italians_desc;Southern Italians proved themselves to be trustworthy allies against our enemies. It would be only better if we accepted them as equals in our realm.;;;;;;;;;;;;;x
+accept_south_italians_title;Accept the Southern Italians;;;;;;;;;;;;;x
 reclaim_messopotamia_desc;Now that Levant is free from Turkish grasp, we can set our sight on our old territories beyond that. Messopotamia was one of the old border regions protecting us from Persia and it?s time to return it under the wings of the Phoenix.;;;;;;;;;;;;;x
 reclaim_messopotamia_title;Reclaim Messopotamia;;;;;;;;;;;;;x
 reclaim_egypt_desc;The Levant along with the city of Jerusalem are once again in Christian hands. This has opened a path towards another one of the ancient provinces of Rome?Aegyptus. Though being held by Muslims at this time, it?s not for long. Nothing can stop us from restoring the Roman Empire!;;;;;;;;;;;;;x
@@ -3172,3 +3188,5 @@ reclaim_rome_desc;With a foothold in southern italy it is time to March for Rome
 reclaim_rome_title;Reclaim Rome;;;;;;;;;;;;;x
 reclaim_levants_desc;Even though Anatolia is back in our hands the Turks still hold key territories in the Levant. The ancient provinces of Syria and Palestine are rightfully ours as the successors of Rome.;;;;;;;;;;;;;x
 reclaim_levants_title;Reclaim the Levant;;;;;;;;;;;;;x
+the_eastern_roman_empire_desc; Our vigil begun with the collapse of the empire, every decade another city fell, every century a province. After the defacto loss of Rome again in 575 the empire grew smaller with each generation. Till it was snuffed out only a hollow memory remained in the hearts of the romans and the halls of power in the west. The Germans and Slavs claimed the mantle. AS IF only under the guiding hand of the Greeks was the Empire Restored to this extend and we will restore the Roman Empire.;;;;;;;;;;;;;x
+the_eastern_roman_empire_title;Our Empire is Restored!;;;;;;;;;;;;;x
