--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1121,8 +1121,6 @@ the_nancy_school;The Nancy School;;;;;;;;;;;;;x
 the_nancy_school_desc;The Nancy School was an early French suggestion-centred school of psychotherapy founded by Ambroise-Auguste Liébeault. Whilst its work centred on the application of what they termed ‘suggestive therapeutics’, they also maintained that hypnosis significantly amplified the efficacy of the suggestions so offered.;;;;;;;;;;;;;x
 the_periodic_table;The Periodic Table;;;;;;;;;;;;;x
 the_periodic_table_desc;The periodic table of the chemical elements is a tabular display of the chemical elements. Although precursors to this table exist, its invention is generally credited to Russian chemist Dmitri Mendeleev, who intended the table to illustrate recurring trends in properties of the elements.;;;;;;;;;;;;;x
-the_police_state;The Police State;;;;;;;;;;;;;x
-the_police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
 the_revolt_of_the_masses;The Revolt of the Masses;;;;;;;;;;;;;x
 the_revolt_of_the_masses_desc;The move towards the establishment of universal suffrage as the basis for determining the balance of political power in society led to an increased sense of hope that with democracy the issues and concerns of The People would finally be addressed. The resulting factionalism caused by the growth of political parties in wake of universal suffrage soon exposed the limitations of liberal democracy as a system for the arbitration of power in society (especially in times of social, economic or political crisis) and led to a great deal of disenchantment with the ideals of democracy as the best system of governance and a search for potential alternatives to more effectively achieve the promises of a better life for all. Written in 1930 by the Spanish intellectual Jose Ortega y Gasset, ‘The Revolt Of The Masses’ warns of the potential threat to the ideal of liberal democracy in its current limitations and the potential for the masses to overwhelm the political system and replace it with alternatives that in the end would destroy the basic principles of classic liberal democracy unless liberal democracy was able to reform itself to meet the challenges produced by mass politics.;;;;;;;;;;;;;x
 the_talkies;The Talkies;;;;;;;;;;;;;x
@@ -1227,3 +1225,5 @@ tool_steel;Tool Steel;;;;;;;;;;;;;x
 tool_steel_desc;Tool steel is a general term for a range of steel alloys that are specifically designed for use in tools, such as hammers, chisels, and punches. These alloys typically contain high levels of carbon.;;;;;;;;;;;;;x
 silicon_steel;Silicon Steel;;;;;;;;;;;;;x
 silicon_steel_desc;Silicon steel is an alloy of iron, carbon, and silicon, and is known for its magnetic properties.;;;;;;;;;;;;;x
+police_state;The Police State;;;;;;;;;;;;;x
+police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
