--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -359,15 +359,23 @@ weapon_platforms;Weapon Platforms;;;;;;;;;;;;;x
 weapon_platforms_desc;Weapon Platforms;;;;;;;;;;;;;x
 advanced_turbine_generators;Advanced Turbine Generators;;;;;;;;;;;;;x
 advanced_turbine_generators_desc;Improved turbines are already well-known and well-studied technology, and using them to generate energy can result in enormous production gains.;;;;;;;;;;;;;x
+assembly_line_mechanization;Assembly Line Mechanization;;;;;;;;;;;;;x
+assembly_line_mechanization_desc;Assembly Line Mechanization;;;;;;;;;;;;;x
 piece_work;Piece Work;;;;;;;;;;;;;x
 piece_work_desc;Piecework is a system of work where workers were paid based on the amount of work they produced, rather than by the hour or by the day. This system is particularly well-suited to factory work, where a worker could be assigned a specific task and then paid based on how many units they were able to produce in a given amount of time.;;;;;;;;;;;;;x
-advanced_steel_alloys;Steel Alloys;;;;;;;;;;;;;x
+advanced_steel_alloys;Complex Steel Alloys;;;;;;;;;;;;;x
 advanced_steel_alloys_desc;Research is managing the uncovering of a plethora of several new steel alloys, which had superior strength, durability, and resistance to corrosion compared to traditional steels, such as Stainless Steel, High-Speed Steel, Tool Steel and many others.;;;;;;;;;;;;;x
-high_ways_free_ways;Advanced Interchange Designs;;;;;;;;;;;;;x
-high_ways_free_ways_desc;Advanced Interchange Designs.;;;;;;;;;;;;;x
+high_ways_free_ways;Advanced Interchange Design;;;;;;;;;;;;;x
+high_ways_free_ways_desc;Advanced Interchange Design;;;;;;;;;;;;;x
 advanced_polymers;Large Scale Polymer Production;;;;;;;;;;;;;x
 advanced_polymers_desc;Large Scale Polymer Production;;;;;;;;;;;;;x
 modernism;Modernism;;;;;;;;;;;;;x
 modernism_desc;Modernism;;;;;;;;;;;;;x
 ontology;Ontology;;;;;;;;;;;;;x
 ontology_desc;Ontology;;;;;;;;;;;;;x
+social_psychology;Social Psychology;;;;;;;;;;;;;x
+social_psychology_desc;Social Psychology;;;;;;;;;;;;;x
+the_police_state;Polizeistaat;;;;;;;;;;;;;x
+the_police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
+psychodynamics;Psychodynamics;;;;;;;;;;;;;x
+psychodynamics_desc;Psychodynamics;;;;;;;;;;;;;x
