--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1233,9 +1233,13 @@ EVTNAME97511;Stand Down;;;;;;;;;;;;;x
 EVTOPTA97511;It’s about time!;;;;;;;;;;;;;x
 EVTDESC97512;As we suspected, the terms of Russia’s treaty are punishing indeed.;;;;;;;;;;;;;x
 EVTOPTA97512;There shall be a reckoning.;;;;;;;;;;;;;x
+EVTNAME97513;French Authority in the Holy Land;;;;;;;;;;;;;x
+EVTDESC97513;In what is perhaps a foolish move, the French have pressured the Turks into accepting their sovereign authority over the Holy Land in Palestine... authority which has traditionally rested with the Russians since the Treaty of Küçük Kaynarca. The question simply remains whether we should interfere. While holy sites are not our concern, we are a nascent European Power trying to find our place among the Greats, and helping our French Allies would surely help us in our cause to Italian Unification. What should we do?;;;;;;;;;;;;;x
 EVTOPTA97513;Refuse to participate;;;;;;;;;;;;;x
 EVTOPTB97513;Support our French allies and join the Coalition;;;;;;;;;;;;;x
 EVTOPTA97514;Honour the Holy Alliance;;;;;;;;;;;;;x
+EVTNAME97514;Crisis in the Ottoman Empire;;;;;;;;;;;;;x
+EVTDESC97514;In what is perhaps a foolish move, the French have pressured the Turks into accepting their sovereign authority over the Holy Land in Palestine... authority which has traditionally rested with the Russians since the Treaty of Küçük Kaynarca. The question simply remains whether we should interfere. While holy sites are not our concern, what goes on the Balkan peninsula certainly is. Our old alliance with Russia, based on the Holy League, as well as our honour, demands we help them. However, an unchecked Russia running amock in our backyard is not a good look. This can be a great opportunity to further our influence in the Balkans, especially in Danubian Principalities. What are we to do?;;;;;;;;;;;;;x
 EVTOPTB97514;Proclaim Neutrality;;;;;;;;;;;;;x
 EVTOPTC97514;Hostile Neutrality;;;;;;;;;;;;;x
 EVTOPTD97514;Join the Coalition Outright;;;;;;;;;;;;;x
