--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -352,6 +352,9 @@ EVTOPTA500267;We stand together against the menacing Russian Bear!;;;;;;;;;;;;;x
 EVTDESC500268;$FROMCOUNTRY$, unlike other Powers in Europe, has declared it will not get involved in @RUS Russian sphere of interest.;;;;;;;;;;;;;x
 EVTNAME500268;$FROMCOUNTRY$ Declines our Offer;;;;;;;;;;;;;x
 EVTOPTA500268;Unfortunate news.;;;;;;;;;;;;;x
+EVTDESC500269;Slava Bogu, we have beaten the Turks again! And all their Western helpers! Russia stands triumphant in the Middle East and the Balkans - it is truly a great day for Mother Russia!;;;;;;;;;;;;;x
+EVTNAME500269;We Are Triumphant;;;;;;;;;;;;;x
+EVTOPTA500269;Russian Hegemony;;;;;;;;;;;;;x
 EVTDESC530001;On a night in $YEAR$, a fire broke out on the 3rd floor of J. L. Van Doren, Oil Merchant and Stearin Candle Manufacturer, known as a seller of whale oil, at 34 New Street in Manhattan, and spread quickly to adjoining buildings. During the ten and a half hours that it burned, the fire killed 4 Firefighters and 26 civilians and in total destroyed 345 buildings, resulting in property damage estimated between 5 and 10 million dollars. \n \n The fire would be the last of three devastating fires that affected the city, the other two occurring in 1776 & 1835. While very destructive, the $YEAR$ fire confirmed the value of building codes restricting wood-frame construction, which were put in place after the lessons learnt from the previous fires.;;;;;;;;;;;;;x
 EVTNAME530001;The Great New York City Fire of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA530001;Fully fund reconstruction efforts.;;;;;;;;;;;;;x
