--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -46,3 +46,4 @@ crimean_war;Crimean War Happened;;;;;;;;;x
 treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
 treaty_of_paris_russia;Treaty of Ayvansaray - Russia won the Crimean War;;;;;;;;;x
 the_manifesto;The Manifesto on Unshakable Autocracy;;;;;;;;;x
+tsaralexander2;Tsar Alexander II Reigns;;;;;;;;;x
