--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1427,3 +1427,4 @@ austrian_betrayal_desc;Austria turned their backs on us in Crimean War. We will 
 prussian_military;Prussian Military;;;;;;;;;;;;;x
 decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
 decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
+caliph_powerless_figurehead;Caliph Powerless Figurhead;;;;;;;;;;;;;x
