--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -47,3 +47,5 @@ treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
 treaty_of_paris_russia;Treaty of Ayvansaray - Russia won the Crimean War;;;;;;;;;x
 the_manifesto;The Manifesto on Unshakable Autocracy;;;;;;;;;x
 tsaralexander2;Tsar Alexander II Reigns;;;;;;;;;x
+social_reform_blocker;Social Reforms Blocked;;;;;;;;;x
+social_reform_blocker;Political Reforms Blocked;;;;;;;;;x
