--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -33,6 +33,8 @@ add_to_sphere_setup;Add $RECIPIENT$ to Sphere of Influence;ajouter $RECIPIENT$ à
 add_to_sphere_short;Add $RECIPIENT$ to Sphere of Influence;ajouter $RECIPIENT$ à la sphère d'influence;$RECIPIENT$ in Einflusssphäre aufnehmen;;;;;;;;;;;x
 annex_africa;Scramble for Africa—Demand State;;;;;;;;;;;;;x
 annex_africa_desc;Force an §Yuncivilized country§W to secede territory according to rules set at the Conference of Great Powers. Note: Costs 1 infamy.;;;;;;;;;;;;;x
+scramble_for_china;Scramble for China;;;;;;;;;;;;;x
+scramble_for_china_desc;Force an §Yuncivilized country§W to secede territory according to rules set at the Conference of Great Powers.;;;;;;;;;;;;;x
 annex_africa_full;Scramble for Africa—Annex;;;;;;;;;;;;;x
 annex_africa_full_desc;Force an §Yuncivilized country§W to become a protectorate according to rules set at the Conference of Great Powers;;;;;;;;;;;;;x
 annex_africa_full_setup;Annex $RECIPIENT$ according to rules set at the Conference of Great Powers;;;;;;;;;;;;;x
