--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -8,8 +8,8 @@ army_leadership_desc;This is the education and leadership principles used by you
 army_tech;Army;;;;;;;;;;;;;x
 chemistry_and_electricity;Chemistry And Electricity;;;;;;;;;;;;;x
 chemistry_and_electricity_desc;This area involves the development of chemistry and electricity and all its spinoffs.;;;;;;;;;;;;;x
-commerce_tech;Commerce;;;;;;;;;;;;;x
-culture_tech;Culture;;;;;;;;;;;;;x
+commerce_tech;Economy;;;;;;;;;;;;;x
+culture_tech;Society;;;;;;;;;;;;;x
 economic_thought_and_critique;Economic Thought And Critique;;;;;;;;;;;;;x
 economic_thought_and_critique_desc;The scientific development of Economics gave large repercussions into the functions of the world economy, both on a micro and macro level. New ideas and knowledge were swiftly applied by business and the state to increase the efficiency of their work.;;;;;;;;;;;;;x
 financial_institutions;Financial Institutions;;;;;;;;;;;;;x
