--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -78,7 +78,7 @@ EVTDESC500127;Austria declares formal neutrality, but enters the Danubian Princi
 EVTOPTA500127;*We* are a threat?! Ungrateful scum.;;;;;;;;;;;;;x
 EVTDESC500128;Still stinging from the 1848 Rebellions, Austria declares complete neutrality and apologizes to the Russian Tsar for being unable to assist in this conflict.;;;;;;;;;;;;;x
 EVTOPTA500128;We will take what we can get.;;;;;;;;;;;;;x
-EVTNAME500129;Vienna declares its unreserved support for Saint Petersburg in the ongoing Bosphorus crisis, upholding the Holy Alliance of Autocrats. Diplomats and military attaches rush to the capital to plan a coordinated response.;;;;;;;;;;;;;x
+EVTDESC500129;Vienna declares its unreserved support for Saint Petersburg in the ongoing Bosphorus crisis, upholding the Holy Alliance of Autocrats. Diplomats and military attaches rush to the capital to plan a coordinated response.;;;;;;;;;;;;;x
 EVTOPTA500129;Brotherly Austria, our only true friend in this world!;;;;;;;;;;;;;x
 EVTNAME500130;Beacon of Orthodoxy;;;;;;;;;;;;;x
 EVTDESC500130;France takes Algeria from Turkey, and almost every year England annexes another Indian principality: none of this disturbs the balance of power - but when Russia occupies Moldavia and Wallachia, albeit only temporarily, that disturbs the balance of power. France occupies Rome and stays there several years during peacetime: that is nothing - but Russia only thinks of occupying Constantinople, and the peace of Europe is threatened. The English declare war on the Chinese, who have, it seems, offended them: no one has the right to intervene - but Russia is obliged to ask Europe for permission if it quarrels with its neighbour. England threatens Greece to support the false claims of a miserable Jew and burns its fleet: that is a lawful action - but Russia demands a treaty to protect millions of Christians, and that is deemed to strengthen its position in the East at the expense of the balance of power. We can expect nothing from the West but blind hatred and malice.... (comment in the margin by Nicholas I: This is the whole point) ---- Mikhail Pogodin's memorandum to Nicholas I, 1853;;;;;;;;;;;;;x
@@ -140,7 +140,17 @@ EVTOPTB500155;Russia is our liberator, we will not turn arms against them!;;;;;;
 EVTNAME500156;Bulgarian Rebellion;;;;;;;;;;;;;x
 EVTDESC500156;Our permanent envoy to the $FROMCOUNTRY$ reports that our cousin, whom we put on the Bulgarian throne, has listened to some ill advice and is preparing a war against us!;;;;;;;;;;;;;x
 EVTOPTA500156;Traitorous Bulgarians!Mobilize the Lower Danube Army.;;;;;;;;;;;;;x
+EVTDESC500157;Ottoman Shackles are gone, the Slavs are going free, and while Russian Empire tolerated our quiet unification of two Principalities, they have annexed Dobrudzha from the Ottomans, which we were hoping to get. Not only that, but their "advisors" seem to be too keen on "advising" down to single minutiaes. Perhaps we shall ask for sea access?;;;;;;;;;;;;;x
+EVTOPTA500157;Ask for Sea Access;;;;;;;;;;;;;x
+EVTOPTB500157;Don't try it;;;;;;;;;;;;;x
+EVTNAME500158;Romania would like a Port;;;;;;;;;;;;;x
 EVTDESC500158;Ever since the end of the Crimean War, Romania, now a united country of previously disunited Moldavia and Wallachia, have yearned for access to the Black Sea. They certainly were not amused when they were told that Tsarist Russia, and not Romania, will receive entirety of Dobruja after the victory in Crimean War. Weak and small, they had to make peace with the fact that they are not getting Dobruja. However, constant issues with international trade, the ever-rising tariffs imposed by Russia on now fully Russian-controlled Danubian Delta has forced the Romanians not just to ask, but to plead for a sea port. Our Ambassador in Bucharest has tried his best not to laugh in the face of the Romanian delegation. He sends word of their petition and asks for instructions. What is our response?;;;;;;;;;;;;;x
+EVTOPTA500158;Cede them a strip of land in southern Dobrudzha.;;;;;;;;;;;;;x
+EVTOPTB500158;They have the Danube access, don't they? So, pay the toll and pass, what's the issue?;;;;;;;;;;;;;x
+EVTNAME500159;Start a Rebellion?;;;;;;;;;;;;;x
+EVTDESC500159;Russians have said no, we have the Danube, they said, we can pay the toll and pass. Is this acceptable or is time to fight yet another oppressor? Can we stand a chance?;;;;;;;;;;;;;x
+EVTOPTA500159;Fight Russia!;;;;;;;;;;;;;x
+EVTOPTB500159;We stand no chance;;;;;;;;;;;;;x
 EVTNAME500160;Austria Annexes Bosnia;;;;;;;;;;;;;x
 EVTDESC500160;In 1908, the Bosnian Annexation Crisis, also known as the Bosnian Crisis, broke out between Austria-Hungary and the Kingdom of Serbia. The conflict originated with the annexation of Bosnia and Herzegovina by Austria-Hungary, which was seen as a threat to Serbia's ambitions to unify all the South Slavic peoples of the Balkans under its rule. The annexation of Bosnia and Herzegovina was met with strong protests from Serbia and Bulgaria, as well as from the other South Slavic nations of the Balkans. The crisis escalated rapidly and almost led to war between Austria-Hungary and Serbia when the Austro-Hungarian government threatened to send troops to the region. The international community, led by the Russian Empire, eventually managed to diffuse the situation and maintain the peace. Nevertheless, the crisis brought Austria-Hungary and Serbia to the brink of war and left a lasting mark on the already fragile political relations between them. How should we react?;;;;;;;;;;;;;x
 EVTOPTA500160;Outrageous! Mobilize the Army and ask the Russians for support!;;;;;;;;;;;;;x
@@ -213,14 +223,44 @@ EVTOPTB500181;Unacceptable. Instruct our Ambassador to the Porte to draw up an a
 EVTNAME500182;Russia proposes to split the Ottoman Empire;;;;;;;;;;;;;x
 EVTOPTA500182;We don't have to fire a single bullet and we get colonies? Sign me up!;;;;;;;;;;;;;x
 EVTOPTB500182;Unacceptable. Instruct our Ambassador to the Porte to draw up an alliance agreement.;;;;;;;;;;;;;x
+EVTDESC500182;However dominant @RUS Russian Empire position in the (former and current) regions of Ottoman Empire is, they are aware of the fact that if they were to attempt to dismantle this Sick Man of Europe alone, that path would lead into conflict and diplomatic isolation. They have called a Conference, and while they are going to be taking the biggest chunk, they are proposing to European Greater Powers their future regions of control, should they Amen the dismantlement. What will our position be?;;;;;;;;;;;;;x
 EVTNAME500184;Ottomans Dismantled;;;;;;;;;;;;;x
 EVTOPTA500184;We will join for concessions;;;;;;;;;;;;;x
 EVTNAME500185;Ceding concessions;;;;;;;;;;;;;x
 EVTNAME500186;Ottomans Dismantled;;;;;;;;;;;;;x
+EVTDESC500187;It is time to pick up our piece of the @TUR Ottoman cake.;;;;;;;;;;;;;x
+EVTOPTA500187;Give us the concessions;;;;;;;;;;;;;x
 EVTNAME500187;Ceding concessions;;;;;;;;;;;;;x
+EVTNAME500188;A new Capital for the Motherland?;;;;;;;;;;;;;x
 EVTDESC500188;The Russian Empire now fully controls the Black Sea, and many territories beyond it. As our borders expand southwards ever further, so too does the focus shift away from the North and our old capital in St Petersburg. While Tsar Peter's idea was grand, and served Russia well in circumstances it found itself, building a grand new city on the banks of the Baltic Sea and finally establishing firm trading connections with the West, our Baltic ports are only good enough for a little more than 6 months per year, as over winter, they freeze and commerce stops. Ever more, our shipping companies trade through our southern warm ports, such as Odessa and Sevastopol, and from recently, Constantinople. As the focus of the industry shifts southwards towards the Donetskiy ugolny basseyn, the infrastructure around it, the ports on the Black Sea, railways we are building all over the South and its burgeoning industry, perhaps the center of administration and utmost authority should follow this trend too. If the Tsar so wishes, he may pick a new capital for our nation.;;;;;;;;;;;;;x
+EVTOPTA500188;Moskva;;;;;;;;;;;;;x
+EVTOPTB500188;Sevastopol;;;;;;;;;;;;;x
+EVTOPTC500188;Odessa;;;;;;;;;;;;;x
+EVTOPTD500188;Kiev;;;;;;;;;;;;;x
+EVTOPTE500188;Tsaritsyn;;;;;;;;;;;;;x
+EVTOPTF500188;Rostov;;;;;;;;;;;;;x
+EVTOPTG500188;Tsarigrad;;;;;;;;;;;;;x
+EVTOPTH500188;Remain in St Petersburg;;;;;;;;;;;;;x
+EVTNAME500189;Renovations of Hagia Sophia Completed;;;;;;;;;;;;;x
 EVTDESC500189;Referring to the destruction of the Theodosian Hagia Sophia and comparing the new church with the old, in 532 Procopius lauded the Justinianic building, writing in his work: "... the Emperor Justinian built not long afterwards a church so finely shaped, that if anyone had enquired of the Christians before the burning if it would be their wish that the church should be destroyed and one like this should take its place, shewing them some sort of model of the building we now see, it seems to me that they would have prayed that they might see their church destroyed forthwith, in order that the building might be converted into its present form." ... Procopius, De aedificiis, I.1.22–23. I wonder, would he say the same of us today?;;;;;;;;;;;;;x
 EVTOPTA500189;Justinian.. have I surpassed thee?;;;;;;;;;;;;;x
+EVTNAME500190;Ultimatum for Manchuria;;;;;;;;;;;;;x
+EVTDESC500190;The Russian Empire established a strong presence in Manchuria in the late 19th century, primarily through the Trans-Siberian Railway. This allowed Russia to become a regional power in the region, with Russian traders and settlers flocking to the area. Russian troops were also sent to quell Chinese revolts. While their Army has been present here since they built the Manchurian Railway, they were supposed to leave at some point. Now we see why they have not, and Russia has issued us ultimatum to give up Manchuria, or else.;;;;;;;;;;;;;x
+EVTNAME500193;Ionian Clashes;;;;;;;;;;;;;x
+EVTDESC500193;Russia liberating Balkans was a good thing. A slow death of the Ottoman Empire was a great thing. However, us not getting our Jewel, our City of Cities, Constantinople, was a bad thing. But such are Great Powers. At least it is no longer in Turkish hands, and our people and clergy propagate their religion freely, and one day, they will come home. But until that day comes, those Greeks that are still under Ottoman control, or rather, chaos, are suffering in ethnic armed clashes against Turks, specially in brotherly Smyrna region. What are we to do about this?;;;;;;;;;;;;;x
+EVTOPTA500193;Arm the Ionian Rebels and ask Russia for help;;;;;;;;;;;;;x
+EVTOPTB500193;Back down;;;;;;;;;;;;;x
+EVTNAME500194;Question of Greeks in Western Anatolia;;;;;;;;;;;;;x
+EVTDESC500194;While most others were happy to see us liberate the Balkans and Anatolia from the Ottoman yoke, Greece was not very happy. They were even less happy when it turned out we, and not them, will take Constantinople. But they have swallowed their pride for the sake of their liberation and friendly relations with our government. However, now situation is boiling in Ionia, particularly in predominantly Greek city of Smyrna. Armed clashes are happening between ethnic Turks and Greeks, and Ottoman Porte is unable to react. They have started arming Greek rebels, and ask us not interfere and not help Turks.;;;;;;;;;;;;;x 
+EVTOPTA500194;Pretend nothing is going on, allow Greek ships to dock in Smyrna;;;;;;;;;;;;;x
+EVTOPTB500194;Side with the Porte, help Turks squash the Greeks;;;;;;;;;;;;;x
+EVTNAME500195;Ionian Greeks Revolt, Russia takes their side;;;;;;;;;;;;;x
+EVTDESC500195;Russia has taken Greek side in the Anatolian conflict, whatever vestiges of authority and power we had are gone, our government is collapsing!;;;;;;;;;;;;;x
+EVTOPTA500195;We are powerless. Give me something for the pain and let me die.;;;;;;;;;;;;;x
+EVTOPTB500195;Send out... er.. what, where are you going? Come back here!;;;;;;;;;;;;;x
+EVTNAME500196;Greek Flag flies over Smyrna;;;;;;;;;;;;;x
+EVTDESC500196;Smyrna is now in Greek hands;;;;;;;;;;;;;x
+EVTOPTA500196;Very good;;;;;;;;;;;;;x
 EVTDESC500220;Russia declared the issue of Greater Eastern Crisis an internal of Russian Empire and its allies. It has shunned all the other Great Powers. A respite comes to us, perhaps. If we are willing to cede some sand to the West, we might yet live as a country and retake our place that was once ours.;;;;;;;;;;;;;x
 EVTNAME500220;Desperate situation calls for a desperate solution;;;;;;;;;;;;;x
 EVTOPTA500220;Swallow our pride and ask the West for help in return for concessions;;;;;;;;;;;;;x
@@ -355,6 +395,9 @@ EVTOPTA500268;Unfortunate news.;;;;;;;;;;;;;x
 EVTDESC500269;Slava Bogu, we have beaten the Turks again! And all their Western helpers! Russia stands triumphant in the Middle East and the Balkans - it is truly a great day for Mother Russia!;;;;;;;;;;;;;x
 EVTNAME500269;We Are Triumphant;;;;;;;;;;;;;x
 EVTOPTA500269;Russian Hegemony;;;;;;;;;;;;;x
+EVTDESC500282;After years of fighting and bickering amongst the German states, the annexation of the Rhineland has caused a turning point in German politics. The German diet has called for the Leipzig Congress to discuss the formation of a unified German state. The capital was decided to be same city where the Congress was held. Leipzig served not only as a strategic capital due to its distance from France, but as a symbolic capital due to it being the site of the Battle of Nations, where in 1813 a German coalition had defeated the First French Empire. \n \n The goal of this new German Confederation is clear: to liberate all oppressed Germans from French rule, the die has been cast in Europe for great and terrible war…;;;;;;;;;;;;;x
+EVTNAME500282;The Leipzig Congress of $YEAR$;;;;;;;;;;;;;x
+EVTOPTA500282;Look how they huddle together in fear! $COUNTRY$ stands resolute and ready!;;;;;;;;;;;;;x
 EVTDESC530001;On a night in $YEAR$, a fire broke out on the 3rd floor of J. L. Van Doren, Oil Merchant and Stearin Candle Manufacturer, known as a seller of whale oil, at 34 New Street in Manhattan, and spread quickly to adjoining buildings. During the ten and a half hours that it burned, the fire killed 4 Firefighters and 26 civilians and in total destroyed 345 buildings, resulting in property damage estimated between 5 and 10 million dollars. \n \n The fire would be the last of three devastating fires that affected the city, the other two occurring in 1776 & 1835. While very destructive, the $YEAR$ fire confirmed the value of building codes restricting wood-frame construction, which were put in place after the lessons learnt from the previous fires.;;;;;;;;;;;;;x
 EVTNAME530001;The Great New York City Fire of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA530001;Fully fund reconstruction efforts.;;;;;;;;;;;;;x
@@ -1939,3 +1982,6 @@ EVTOPTA500249;America is Lost;;;;;;;;;;;;;x
 EVTNAME500249;United States Attack;;;;;;;;;;;;;x
 EVTDESC500249;Our border outposts report that United States Army @USA have crossed the border into Russian America 6 days ago, Port Angelevsk authorities report. They request immediate reinforcements if we are to hold the colony!. \n §R WARNING: If USA occupies California and Oregon, and you do not manage to liberate it (coastal cities trigger the peace deal) for 3 years since this event fires, they will seize your American holdings, and Britain will take Columbia and Alaska. Be Careful!;;;;;;;;;;;;;x
 EVTOPTA500249;They will have to hold the line.;;;;;;;;;;;;;x
+EVTDESC900643;The Ottomans have refused our offer. Evidently, they will take their chances.;;;;;;;;;;;;;x
+EVTNAME900643;The Ottomans Have Refused;;;;;;;;;;;;;x
+EVTOPTA900643;We accept their decision.;;;;;;;;;;;;;x
