--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1988,3 +1988,20 @@ EVTOPTA500249;They will have to hold the line.;;;;;;;;;;;;;x
 EVTDESC900643;The Ottomans have refused our offer. Evidently, they will take their chances.;;;;;;;;;;;;;x
 EVTNAME900643;The Ottomans Have Refused;;;;;;;;;;;;;x
 EVTOPTA900643;We accept their decision.;;;;;;;;;;;;;x
+EVTNAME500198;The Pacifican Dominion;;;;;;;;;;;;x
+EVTDESC500198;The colony of $COUNTRY_ADJ$ America, composed of Alaska from the north, to California to the very south, has asked to be governed as an autonomous dominion within the empire.;;;;;;;;;;;;x
+EVTOPTA500198;This can only be good for the empire.;;;;;;;;;;;;;x
+EVTOPTB500198;No, they shall remain under our direct control.;;;;;;;;;;;;;x
+EVTOPTC500198;Onwards to Russian America!;;;;;;;;;;;;x
+EVTNAME500197;Faith of Armenia(s);;;;;;;;;;;;x
+EVTDESC500197;The Territory of Armenia has always been of particular interest of our state. Armenians and their Apostolic Church has been if not cordial, then tolerated by the government. Many important Russians are of Armenian origin, and many Armenians have served us well in governing the Caucasus. Now that we have finally liberated the Western Armenian Plateau from the Ottoman yoke, millions of Armenians can now rest assured they are safe and free to practice their religion and culture. However, there remains a question of government. Should we create a vassal state of Armenia, to encompass all these new lands under a friendly monarchy, or are we to make Armenian Principalities direct parts of our Empire?;;;;;;;;;;;;;x
+EVTOPTA500197;Incorporate Armenia into the Empire and make Armenian an official language of Caucasus-Armenia region;;;;;;;;;;;;x
+EVTOPTB500197;Free them as an independent nation in former Ottoman lands;;;;;;;;;;;;x
+EVTOPTC500197;Unite Cilicia into Armenia and keep them as a puppet;;;;;;;;;;;;x
+EVTOPTD500197;Keep the status quo;;;;;;;;;;;;x
+EVTDESC500203;Our Dear Caliph's forces have been overwhelmed and the apparatus of the government has been seized by Radical Officers of the Ottoman Army! Caliph has been summarily executed, as well as several Russian diplomats caught in Ankara. The hour is now to throw off Russian shackles off our nation and reclaim our people's place in the world.;;;;;;;;;;;;;x
+EVTNAME500203;Turkish Nationalist Revolution;;;;;;;;;;;;x
+EVTOPTA500203;Depose the Caliph, seize the government! Onwards to Freedom!;;;;;;;;;;;;x
+EVTNAME500204;Turkish Rebellion!;;;;;;;;;;;;x
+EVTDESC500204;Caliph's forces have been overwhelmed and the apparatus of the government has been seized by Radical Officers of the Ottoman Army! Caliph has been summarily executed, as well as several of our Russian diplomats caught in Ankara. The Turkish people have been thrown into a nationalist frenzy and rally behind these as they call themselves, Young Turks!;;;;;;;;;;;;;x
+EVTOPTA500204;We must end any notion of their sovereignty, once and for all.;;;;;;;;;;;;x
